@@ -2,3 +2,5 @@
 7/1/2016........11:18:9 Compare Text D:\2compare\2Compare\Data\fileLeft.txt<=>D:\2compare\2Compare\Data\fileRight.txt
 7/1/2016........11:18:40 Compare Text D:\2compare\2Compare\Data\fileLeft.txt<=>D:\2compare\2Compare\Data\fileRight.txt
 6/1/2016........20:38:41 Compare Folder F:\check<=>F:\check2
+7/1/2016........13:26:4 Compare Text D:\2compare\2Compare\Data\fileLeft.txt<=>D:\2compare\2Compare\Data\fileRight.txt
+7/1/2016........13:29:48 Compare Text D:\2compare\2Compare\Data\fileLeft.txt<=>D:\2compare\2Compare\Data\fileRight.txt
